--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,7 +1,7 @@
 .button {
     -fx-font-weight: bold;
 }
-#bgHbox{
+#bgPane{
     -fx-background-image: url("..//bgLarge.png");
     -fx-background-repeat: stretch;
 }
