--- a/src/main/resources/fxml/KayttajaAdmin.fxml
+++ b/src/main/resources/fxml/KayttajaAdmin.fxml
@@ -1,69 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="${screen.visualBounds.height}" prefWidth="${screen.visualBounds.height}" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.KayttajaAdminController">
-   <center>
-      <AnchorPane BorderPane.alignment="CENTER">
+<GridPane id="bgPane" prefHeight="1166.0" prefWidth="2044.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.KayttajaAdminController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.8" minWidth="0.0" prefWidth="123.19998779296874" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1567.6000244140625" minWidth="10.0" prefWidth="1374.4000122070313" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.0" minWidth="0.0" prefWidth="118.40000000000009" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="388.0" minWidth="10.0" prefWidth="380.0" />
+  </columnConstraints>
+  <rowConstraints>
+      <RowConstraints maxHeight="564.8" minHeight="10.0" prefHeight="123.19999847412107" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="564.8" minHeight="10.0" prefHeight="81.60000000000002" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="855.1999755859375" minHeight="10.0" prefHeight="823.2000000000002" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="187.2000488281251" minHeight="0.0" prefHeight="178.4000000000001" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="209.60002441406255" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <TableView fx:id="kayttajaTableView" editable="true" prefHeight="802.0" prefWidth="1392.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <columns>
+            <TableColumn fx:id="nimiColumn" onEditCommit="#nimiEditCommit" prefWidth="583.1999953985214" resizable="false" text="NIMI" />
+            <TableColumn fx:id="emailColumn" onEditCommit="#emailEditCommit" prefWidth="610.4000244140625" resizable="false" text="SÄHKÖPOSTI" />
+            <TableColumn fx:id="valtuudetColumn" onEditCommit="#valtuudetEditCommit" prefWidth="170.39990234375" resizable="false" text="VALTUUDET" />
+         </columns>
+      </TableView>
+      <VBox prefHeight="824.0" prefWidth="331.0" spacing="25.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
          <children>
-            <ImageView pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0">
-               <image>
-                  <Image url="@../bgLarge.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" layoutX="1327.0" layoutY="45.0" prefHeight="54.0" prefWidth="442.0" text="USERINFO" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Label>
-            <Button fx:id="LogoutBtn" layoutX="1784.0" layoutY="52.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="35.0" prefWidth="79.0" text="LOGOUT">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-            <Label fx:id="bizName" alignment="CENTER" contentDisplay="CENTER" layoutX="648.0" layoutY="108.0" prefHeight="54.0" prefWidth="624.0" text="YRITYS OY" textFill="WHITE" AnchorPane.leftAnchor="648.0" AnchorPane.rightAnchor="648.0">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Label>
-            <TableView fx:id="kayttajaTableView" editable="true" layoutX="489.0" layoutY="181.0" prefHeight="761.0" prefWidth="942.0" AnchorPane.leftAnchor="489.0" AnchorPane.rightAnchor="489.0">
-               <columns>
-                  <TableColumn fx:id="nimiColumn" onEditCommit="#nimiEditCommit" prefWidth="365.60003662109375" resizable="false" text="NIMI" />
-                  <TableColumn fx:id="emailColumn" onEditCommit="#emailEditCommit" prefWidth="447.199951171875" resizable="false" text="SÄHKÖPOSTI" />
-                  <TableColumn fx:id="valtuudetColumn" onEditCommit="#valtuudetEditCommit" prefWidth="132.800048828125" resizable="false" text="VALTUUDET" />
-               </columns>
-            </TableView>
-            <DatePicker fx:id="datePicker" disable="true" layoutX="1533.0" layoutY="286.0" opacity="0.0" prefHeight="35.0" prefWidth="330.0" />
-            <Button fx:id="takaisinBtn" layoutX="67.0" layoutY="45.0" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="97.0" text="TAKAISIN">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="tallennaBtn" layoutX="749.0" layoutY="965.0" mnemonicParsing="false" onMouseClicked="#tallennaBtnPainettu" prefHeight="71.0" prefWidth="446.0" text="TALLENNA MUUTOKSET">
+            <Button fx:id="lisaaBtn" mnemonicParsing="false" onMouseClicked="#lisaaBtnPainettu" prefHeight="71.0" prefWidth="336.0" text="LISÄÄ KÄYTTÄJÄ">
                <font>
                   <Font name="System Bold" size="32.0" />
                </font>
             </Button>
-            <Button fx:id="lisaaBtn" layoutX="1514.0" layoutY="304.0" mnemonicParsing="false" onMouseClicked="#lisaaBtnPainettu" prefHeight="71.0" prefWidth="336.0" text="LISÄÄ KÄYTTÄJÄ">
+            <Button fx:id="poistaBtn" mnemonicParsing="false" onMouseClicked="#poistaBtnPainettu" prefHeight="71.0" prefWidth="336.0" text="POISTA KÄYTTÄJÄ">
                <font>
                   <Font name="System Bold" size="32.0" />
                </font>
             </Button>
-            <Button fx:id="poistaBtn" layoutX="1514.0" layoutY="387.0" mnemonicParsing="false" onMouseClicked="#poistaBtnPainettu" prefHeight="71.0" prefWidth="336.0" text="POISTA KÄYTTÄJÄ">
-               <font>
-                  <Font name="System Bold" size="32.0" />
-               </font>
-            </Button>
+            <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" />
          </children>
-      </AnchorPane>
-   </center>
-</BorderPane>
+      </VBox>
+      <Button fx:id="tallennaBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#tallennaBtnPainettu" prefHeight="71.0" prefWidth="446.0" text="TALLENNA MUUTOKSET" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <font>
+            <Font name="System Bold" size="32.0" />
+         </font>
+      </Button>
+      <GridPane prefHeight="123.0" prefWidth="1541.0" GridPane.columnSpan="2147483647">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.1999755859375" minWidth="10.0" prefWidth="196.1999755859375" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1283.9999755859376" minWidth="10.0" prefWidth="994.6000244140624" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1479.8" minWidth="10.0" prefWidth="288.59992675781245" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.2000732421875" minWidth="0.0" prefWidth="94.60004882812495" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="60.8" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="67.99999885559082" minHeight="10.0" prefHeight="55.4" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="126.0" text="TAKAISIN" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
+            </Button>
+            <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="400.0" text="USERINFO" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="26.0" />
+               </font>
+               <padding>
+                  <Insets right="20.0" />
+               </padding>
+            </Label>
+            <Button fx:id="LogoutBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="35.0" prefWidth="85.0" text="LOGOUT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Button>
+            <Label fx:id="bizName" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="460.0" text="YRITYS OY" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="26.0" />
+               </font>
+            </Label>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <GridPane.margin>
+            <Insets right="50.0" />
+         </GridPane.margin>
+      </GridPane>
+   </children>
+   <padding>
+      <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+   </padding>
+</GridPane>
