--- a/src/main/resources/fxml/VarausAdmin.fxml
+++ b/src/main/resources/fxml/VarausAdmin.fxml
@@ -1,66 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.VarausAdminController">
-   <center>
-      <AnchorPane BorderPane.alignment="CENTER">
-         <children>
-            <ImageView pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0">
-               <image>
-                  <Image url="@../bgLarge.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" layoutX="1327.0" layoutY="45.0" prefHeight="54.0" prefWidth="442.0" text="USERINFO" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Label>
-            <Button fx:id="LogoutBtn" layoutX="1784.0" layoutY="52.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="35.0" prefWidth="79.0" text="LOGOUT">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-            <Label fx:id="bizName" alignment="CENTER" contentDisplay="CENTER" layoutX="648.0" layoutY="108.0" prefHeight="54.0" prefWidth="624.0" text="YRITYS OY" textFill="WHITE" AnchorPane.leftAnchor="648.0" AnchorPane.rightAnchor="648.0">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Label>
-            <TableView fx:id="varauksetTableView" editable="true" layoutX="67.0" layoutY="269.0" prefHeight="674.0" prefWidth="1782.0">
-               <columns>
-                  <TableColumn fx:id="nimiColumn" onEditCommit="#nimiEditCommit" prefWidth="288.80003356933594" resizable="false" text="VARAAJAN NIMI" />
-                  <TableColumn fx:id="tavaraColumn" onEditCommit="#tavaraEditCommit" prefWidth="355.20001220703125" resizable="false" text="TAVARA" />
-                  <TableColumn fx:id="alkupvmColumn" minWidth="0.0" onEditCommit="#alkupvmEditCommit" prefWidth="300.0" resizable="false" text="ALKUPVM" />
-                  <TableColumn fx:id="paattymispvmColumn" onEditCommit="#paattymispvmEditCommit" prefWidth="300.0" resizable="false" text="PÄÄTTYMISPVM" />
-                  <TableColumn fx:id="kuvausColumn" onEditCommit="#kuvausEditCommit" prefWidth="609.60009765625" resizable="false" text="KUVAUS" />
-               </columns>
-            </TableView>
-            <DatePicker fx:id="datePicker" disable="true" layoutX="1533.0" layoutY="286.0" opacity="0.0" prefHeight="35.0" prefWidth="330.0" />
-            <Button fx:id="takaisinBtn" layoutX="67.0" layoutY="45.0" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="97.0" text="TAKAISIN">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="hyvaksyBtn" layoutX="704.0" layoutY="968.0" mnemonicParsing="false" onMouseClicked="#hyvaksyBtnPainettu" prefHeight="71.0" prefWidth="260.0" text="HYVÄKSY" textFill="#17b50f">
-               <font>
-                  <Font name="System Bold" size="32.0" />
-               </font>
-            </Button>
-            <Button fx:id="hylkaaBtn" layoutX="1067.0" layoutY="968.0" mnemonicParsing="false" onMouseClicked="#hylkaaBtnPainettu" prefHeight="71.0" prefWidth="260.0" text="HYLKÄÄ" textFill="#e50606">
-               <font>
-                  <Font name="System Bold" size="32.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
-   </center>
-</BorderPane>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="876.0" prefWidth="1772.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="View.VarausAdminController">
+  <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.79998779296875" minWidth="4.800003814697259" prefWidth="83.20000610351562" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.99999618530273" minWidth="0.0" prefWidth="218.39999389648438" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="514.2" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="102.19999999999993" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="619.1999755859375" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="114.4000244140625" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="0.0" prefWidth="70.40000000000009" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="239.59999389648436" minHeight="10.0" prefHeight="92.2000198364258" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="269.59998016357423" minHeight="10.0" prefHeight="269.59998016357423" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="428.7999755859375" minHeight="10.0" prefHeight="373.59996337890624" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="122.39999999999998" minHeight="10.0" prefHeight="68.00003662109373" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" prefHeight="54.0" prefWidth="457.0" text="USERINFO" textFill="WHITE" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Label>
+      <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="35.0" prefWidth="90.0" text="LOGOUT" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <GridPane.margin>
+            <Insets left="25.0" right="25.0" />
+         </GridPane.margin>
+      </Button>
+      <Label fx:id="bizName" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="685.0" text="YRITYS OY" textFill="WHITE" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+      </Label>
+      <TableView fx:id="varauksetTableView" editable="true" prefHeight="590.0" prefWidth="1669.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="2">
+         <columns>
+            <TableColumn fx:id="nimiColumn" onEditCommit="#nimiEditCommit" prefWidth="288.80003356933594" resizable="false" text="VARAAJAN NIMI" />
+            <TableColumn fx:id="tavaraColumn" onEditCommit="#tavaraEditCommit" prefWidth="412.0000305175781" resizable="false" text="TAVARA" />
+            <TableColumn fx:id="alkupvmColumn" minWidth="0.0" onEditCommit="#alkupvmEditCommit" prefWidth="184.0" resizable="false" text="ALKUPVM" />
+            <TableColumn fx:id="paattymispvmColumn" minWidth="0.0" onEditCommit="#paattymispvmEditCommit" prefWidth="184.0" resizable="false" text="PÄÄTTYMISPVM" />
+            <TableColumn fx:id="kuvausColumn" onEditCommit="#kuvausEditCommit" prefWidth="597.600048828125" resizable="false" text="KUVAUS" />
+         </columns>
+      </TableView>
+      <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="97.0" text="TAKAISIN" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="hyvaksyBtn" mnemonicParsing="false" onMouseClicked="#hyvaksyBtnPainettu" prefHeight="71.0" prefWidth="260.0" text="HYVÄKSY" textFill="#17b50f" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+         <font>
+            <Font name="System Bold" size="32.0" />
+         </font>
+         <GridPane.margin>
+            <Insets top="25.0" />
+         </GridPane.margin>
+      </Button>
+      <Button fx:id="hylkaaBtn" mnemonicParsing="false" onMouseClicked="#hylkaaBtnPainettu" prefHeight="71.0" prefWidth="260.0" text="HYLKÄÄ" textFill="#e50606" GridPane.columnIndex="4" GridPane.halignment="LEFT" GridPane.rowIndex="3">
+         <font>
+            <Font name="System Bold" size="32.0" />
+         </font>
+         <GridPane.margin>
+            <Insets top="25.0" />
+         </GridPane.margin>
+      </Button>
+      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4" />
+   </children>
+   <padding>
+      <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+   </padding>
+</GridPane>
