--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -12,131 +13,164 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="${screen.visualBounds.height}" prefWidth="${screen.visualBounds.width}" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.NakymaController">
-   <center>
-      <AnchorPane BorderPane.alignment="CENTER">
+<GridPane prefHeight="815.0" prefWidth="1947.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.NakymaController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="486.00001831054686" minWidth="0.0" prefWidth="35.399993896484375" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="503.4000061035156" minWidth="0.0" prefWidth="503.4000061035156" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="781.8" minWidth="10.0" prefWidth="703.6000244140625" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="741.8000244140626" minWidth="10.0" prefWidth="189.20002441406245" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="641.8000244140626" minWidth="0.0" prefWidth="98.60004882812495" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="308.800048828125" minWidth="0.0" prefWidth="11.399951171875045" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="422.40007324218755" minWidth="10.0" prefWidth="137.60002441406255" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.8000000000002" minWidth="10.0" prefWidth="235.60000000000014" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.8000000000002" minWidth="0.0" prefWidth="0.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="18.400016784667997" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="312.80000000000007" minHeight="0.0" prefHeight="85.59998779296878" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="615.0000122070312" minHeight="10.0" prefHeight="615.0000122070312" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="95.80002441406248" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
+      <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" prefHeight="54.0" prefWidth="454.0" text="USERINFO" textFill="WHITE" GridPane.columnIndex="3" GridPane.columnSpan="4" GridPane.halignment="RIGHT">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+         <GridPane.margin>
+            <Insets right="25.0" top="25.0" />
+         </GridPane.margin>
+      </Label>
+      <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT" GridPane.columnIndex="7" GridPane.halignment="RIGHT">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <GridPane.margin>
+            <Insets right="25.0" top="25.0" />
+         </GridPane.margin>
+      </Button>
+      <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowSpan="2" />
+      <TextField fx:id="searchBar" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <Label fx:id="bizName" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="624.0" text="YRITYS OY" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+         <font>
+            <Font name="System Bold" size="36.0" />
+         </font>
+         <GridPane.margin>
+            <Insets top="25.0" />
+         </GridPane.margin>
+      </Label>
+      <ChoiceBox fx:id="categorySelect" prefHeight="38.0" prefWidth="170.0" value="NIMI" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <items>
+            <FXCollections fx:factory="observableArrayList">
+               <String fx:value="NIMI" />
+               <String fx:value="KATEGORIA" />
+            </FXCollections>
+         </items>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </ChoiceBox>
+      <Button fx:id="searchBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="86.0" text="HAE" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <TabPane fx:id="tabPane" prefHeight="716.0" prefWidth="1554.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="3">
+         <tabs>
+            <Tab fx:id="kaikkiTab" text="Kaikki ">
+               <content>
+                  <StackPane fx:id="kaikkiStack" prefHeight="722.0" prefWidth="1446.0">
+                     <children>
+                        <TableView fx:id="kaikkiTableView" prefHeight="408.0" prefWidth="1478.0">
+                           <columns>
+                              <TableColumn fx:id="idColumn" onEditCommit="#idOnEditCommit" prefWidth="64.0" resizable="false" text="ID" />
+                              <TableColumn fx:id="nimiColumn" onEditCommit="#nimiOnEditCommit" prefWidth="288.80003356933594" resizable="false" text="NIMI" />
+                              <TableColumn fx:id="valmistajaColumn" onEditCommit="#valmistajaOnEditCommit" prefWidth="236.79998779296875" resizable="false" text="VALMISTAJA" />
+                              <TableColumn fx:id="tyyppiColumn" minWidth="0.0" onEditCommit="#tyyppiOnEditCommit" prefWidth="242.39996337890625" resizable="false" text="TYYPPI" />
+                              <TableColumn fx:id="luvanvaraisuusColumn" onEditCommit="#luvanvaraisuusOnEditCommit" prefWidth="168.8001708984375" resizable="false" text="LUVANVARAISUUS" />
+                              <TableColumn fx:id="kuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="366.39996337890625" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="tilaColumn" maxWidth="118.4000244140625" prefWidth="118.4000244140625" text="TILA" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </StackPane>
+               </content>
+            </Tab>
+            <Tab fx:id="omatTab" text="Omat varaukset">
+               <content>
+                  <StackPane fx:id="omatStack" prefHeight="719.0" prefWidth="1446.0">
+                     <children>
+                        <TableView fx:id="omatTable" prefHeight="408.0" prefWidth="1505.0">
+                           <columns>
+                              <TableColumn fx:id="laiteidColumn" onEditCommit="#laiteidOneEditCommit" prefWidth="75.0" resizable="false" text="LAITEID" />
+                              <TableColumn fx:id="laitenimiColumn" onEditCommit="#laitenimiOnEditCommit" prefWidth="369.6000518798828" text="LAITTEEN NIMI" />
+                              <TableColumn fx:id="alkupvmColumn" onEditCommit="#alkupvmOnEditCommit" prefWidth="199.19998168945312" resizable="false" text="VARAUKSEN ALKUPVM" />
+                              <TableColumn fx:id="paattymispvmColumn" onEditCommit="#paattymispvmOnEditCommit" prefWidth="220.800048828125" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
+                              <TableColumn fx:id="varausidColumn" onEditCommit="#varausidOnEditCommit" prefWidth="112.7999267578125" resizable="false" text="VARAUSID" />
+                              <TableColumn fx:id="varauskuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="416.79998779296875" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="palautettuColumn" maxWidth="96.0" minWidth="0.0" onEditCommit="#palautettuOnEditCommit" prefWidth="96.0" resizable="false" text="PALAUTETTU" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </StackPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+      <VBox prefHeight="438.0" prefWidth="394.0" GridPane.columnIndex="6" GridPane.columnSpan="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
          <children>
-            <ImageView pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0">
-               <image>
-                  <Image url="@../bgLarge.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" layoutX="1327.0" layoutY="45.0" prefHeight="54.0" prefWidth="442.0" text="USERINFO" textFill="WHITE">
+            <Button fx:id="henkilostoBtn" mnemonicParsing="false" onMouseClicked="#henkilostoBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="HALLINNOI HENKILÖITÄ">
                <font>
-                  <Font name="System Bold" size="36.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
-            </Label>
-            <Button fx:id="LogoutBtn" layoutX="1784.0" layoutY="52.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="35.0" prefWidth="79.0" text="LOGOUT">
+               <VBox.margin>
+                  <Insets bottom="25.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="hallnnoiBtn" mnemonicParsing="false" onMouseClicked="#hallinnoiBtnPainettu" prefHeight="39.0" prefWidth="363.0" text="HALLINNOI VARAUKSIA">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" layoutX="67.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" />
-            <TextField fx:id="searchBar" layoutX="64.0" layoutY="222.0" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi...">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-            <Label fx:id="bizName" layoutX="587.0" layoutY="133.0" prefHeight="54.0" prefWidth="624.0" text="YRITYS OY" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="36.0" />
-               </font>
-            </Label>
-            <ChoiceBox fx:id="categorySelect" layoutX="1240.0" layoutY="224.0" prefHeight="35.0" prefWidth="169.0" value="NIMI">
-                <items>
-                <FXCollections fx:factory="observableArrayList">
-            <String fx:value="NIMI" />
-            <String fx:value="KATEGORIA" />
-                </FXCollections>
-                </items>
-            </ChoiceBox>
-            <Button fx:id="searchBtn" layoutX="1435.0" layoutY="224.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="79.0" text="HAE">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-            <TabPane fx:id="tabPane" layoutX="67.0" layoutY="286.0" prefHeight="716.0" prefWidth="1446.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab fx:id="kaikkiTab" text="Kaikki ">
-                  <content>
-                    <AnchorPane fx:id="kaikkiAnchor" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <StackPane fx:id="kaikkiStack" prefHeight="722.0" prefWidth="1446.0">
-                                 <children>
-                                    <TableView fx:id="kaikkiTableView" prefHeight="721.0" prefWidth="1446.0">
-                                      <columns>
-                                          <TableColumn fx:id="idColumn" onEditCommit="#idOnEditCommit" prefWidth="64.0" resizable="false" text="ID" />
-                                        <TableColumn fx:id="nimiColumn" onEditCommit="#nimiOnEditCommit" prefWidth="288.80003356933594" resizable="false" text="NIMI" />
-                                        <TableColumn fx:id="valmistajaColumn" onEditCommit="#valmistajaOnEditCommit" prefWidth="236.79998779296875" resizable="false" text="VALMISTAJA" />
-                                          <TableColumn fx:id="tyyppiColumn" minWidth="0.0" onEditCommit="#tyyppiOnEditCommit" prefWidth="242.39996337890625" resizable="false" text="TYYPPI" />
-                                          <TableColumn fx:id="luvanvaraisuusColumn" onEditCommit="#luvanvaraisuusOnEditCommit" prefWidth="168.8001708984375" resizable="false" text="LUVANVARAISUUS" />
-                                          <TableColumn fx:id="kuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="381.599853515625" resizable="false" text="KUVAUS" />
-                                          <TableColumn fx:id="tilaColumn" prefWidth="64.0001220703125" text="TILA" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </StackPane>
-                           </children>
-                        </AnchorPane>
-                  </content>
-                </Tab>
-                <Tab fx:id="omatTab" text="Omat varaukset">
-                  <content>
-                    <AnchorPane fx:id="omatAnchor" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <StackPane fx:id="omatStack" prefHeight="719.0" prefWidth="1446.0">
-                                 <children>
-                                    <TableView fx:id="omatTable" prefHeight="721.0" prefWidth="200.0">
-                                      <columns>
-                                        <TableColumn fx:id="laiteidColumn" onEditCommit="#laiteidOneEditCommit" prefWidth="75.0" resizable="false" text="LAITEID" />
-                                          <TableColumn fx:id="laitenimiColumn" onEditCommit="#laitenimiOnEditCommit" prefWidth="369.6000518798828" text="LAITTEEN NIMI" />
-                                        <TableColumn fx:id="alkupvmColumn" onEditCommit="#alkupvmOnEditCommit" prefWidth="152.0" resizable="false" text="VARAUKSEN ALKUPVM" />
-                                          <TableColumn fx:id="paattymispvmColumn" onEditCommit="#paattymispvmOnEditCommit" prefWidth="173.60003662109375" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
-                                          <TableColumn fx:id="varausidColumn" onEditCommit="#varausidOnEditCommit" prefWidth="128.800048828125" resizable="false" text="VARAUSID" />
-                                          <TableColumn fx:id="varauskuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="489.599853515625" resizable="false" text="KUVAUS" />
-                                          <TableColumn fx:id="palautettuColumn" minWidth="0.0" onEditCommit="#palautettuOnEditCommit" prefWidth="137.599853515625" resizable="false" text="PALAUTETTU" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </StackPane>
-                           </children>
-                        </AnchorPane>
-                  </content>
-                </Tab>
-              </tabs>
-            </TabPane>
-            <DatePicker fx:id="datePicker" disable="true" layoutX="1533.0" layoutY="286.0" opacity="0.0" prefHeight="35.0" prefWidth="330.0" />
-            <Button fx:id="varausBtn" layoutX="1582.0" layoutY="286.0" mnemonicParsing="false" onMouseClicked="#varausNappiPainettu" text="TEE VARAUS">
-               <font>
-                  <Font name="System Bold" size="37.0" />
-               </font>
-            </Button>
-            <TitledPane fx:id="kalenteriPane" alignment="CENTER" animated="false" layoutX="1582.0" layoutY="448.0" prefHeight="257.0" prefWidth="270.0" text="KALENTERI" textAlignment="CENTER">
-              <content>
-                <AnchorPane fx:id="kalenteriAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="190.0" prefWidth="281.0" />
-              </content>
+            <TitledPane fx:id="kalenteriPane" alignment="CENTER" animated="false" prefHeight="273.0" prefWidth="338.0" text="KALENTERI" textAlignment="CENTER">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="25.0" top="25.0" />
+               </VBox.margin>
+               <content>
+                  <StackPane fx:id="kalenteriStackPane" prefHeight="246.0" prefWidth="336.0" />
+               </content>
             </TitledPane>
-            <Button fx:id="hallnnoiBtn" layoutX="1583.0" layoutY="386.0" mnemonicParsing="false" onMouseClicked="#hallinnoiBtnPainettu" text="HALLINNOI VARAUKSIA">
+            <Button fx:id="varausBtn" mnemonicParsing="false" onMouseClicked="#varausNappiPainettu" prefHeight="39.0" prefWidth="348.0" text="TEE VARAUS">
                <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Button>
-            <Button fx:id="henkilostoBtn" layoutX="1581.0" layoutY="721.0" mnemonicParsing="false" onMouseClicked="#henkilostoBtnPainettu" text="HALLINNOI HENKILÖITÄ">
-               <font>
-                  <Font name="System Bold" size="21.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
          </children>
-      </AnchorPane>
-   </center>
-</BorderPane>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
+         <GridPane.margin>
+            <Insets top="25.0" />
+         </GridPane.margin>
+      </VBox>
+      <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" GridPane.columnIndex="3" />
+   </children>
+   <padding>
+      <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+   </padding>
+</GridPane>
